--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "version": "1.0.0",
   "description": "the backed end api for blue horizon project",
   "main": "app.js",
-"scripts": {
-  "start": "nodemon backend/app.js",
-  "build": "npm install && cd Client && npm install && npx vite build && cd .."
-}
-,
+  "scripts": {
+    "start": "node backend/app.js",
+    "dev": "nodemon backend/app.js",
+    "build": "npm install && cd Client && npm install && npx vite build && cd .."
+  },
   "author": "Gautam malik",
   "license": "ISC",
   "dependencies": {
